# PAOO_tema1

src/: CMakeLists.txt  main.cpp
src/Circle_lib/: CMakeLists.txt  Circle.cpp  Circle.h
src/IDCard_lib/: CMakeLists.txt  IDCard.cpp  IDCard.h
src/Rectangle_lib/: CMakeLists.txt  Rectangle.cpp  Rectangle.h
src/Shape_lib/: CMakeLists.txt  Shape.h
src/Square_lib/: CMakeLists.txt  Square.cpp  Square.h
src/User_lib/: CMakeLists.txt  User.cpp  User.h
